--- a/default.html
+++ b/default.html
@@ -1,1 +1,12 @@
-Stock Recommendations
+<html>
+<head>
+  <script src="util.js"></script>
+
+</head>
+<body>
+  Stock Recommendations  
+</body>
+  
+</html>
+
+
